@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.ktc.togetherPet.model.entity.Breed;
 import com.ktc.togetherPet.model.entity.Missing;
 import com.ktc.togetherPet.model.entity.Pet;
+import com.ktc.togetherPet.model.entity.Region;
 import com.ktc.togetherPet.model.vo.Location;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -31,8 +32,12 @@ class MissingRepositoryTest {
     @Autowired
     private BreedRepository breedRepository;
 
+    @Autowired
+    private RegionRepository regionRepository;
+
     private List<Pet> givenPet;
     private List<Missing> givenMissing;
+    private List<Region> givenRegion;
 
     @BeforeEach
     void setUp() {
@@ -72,13 +77,30 @@ class MissingRepositoryTest {
 
         petRepository.saveAll(givenPet);
 
+        givenRegion = List.of(
+            new Region(
+                1L,
+                "testProvince1",
+                "testDistrict1",
+                "testNeighborhood1"
+            ),
+            new Region(
+                2L,
+                "testProvince2",
+                "testDistrict2",
+                "testNeighborhood2"
+            )
+        );
+
+        regionRepository.saveAll(givenRegion);
+
         givenMissing = List.of(
             new Missing(
                 givenPet.get(0),
                 true,
                 LocalDateTime.of(2024, 10, 17, 12, 40, 44),
                 new Location(15.0D, 15D),
-                1L,
+                givenRegion.getFirst(),
                 "testDescription1"
             ),
             new Missing(
@@ -86,7 +108,7 @@ class MissingRepositoryTest {
                 true,
                 LocalDateTime.of(2024, 10, 17, 12, 40, 22),
                 new Location(15.0D, 15D),
-                1L,
+                givenRegion.getFirst(),
                 "testDescription2"
             ),
             new Missing(
@@ -94,7 +116,7 @@ class MissingRepositoryTest {
                 false,
                 LocalDateTime.of(2024, 10, 17, 12, 40, 22),
                 new Location(20D, 20D),
-                2L,
+                givenRegion.get(1),
                 "testDescription3"
             )
         );
@@ -113,7 +135,8 @@ class MissingRepositoryTest {
         missingRepository.saveAll(givenMissing);
 
         // then
-        List<Missing> actual = missingRepository.findAllByRegionCodeAndIsMissingIsTrue(1L);
+        List<Missing> actual = missingRepository
+            .findAllByRegionAndIsMissingIsTrue(givenRegion.getFirst());
         assertEquals(expect, actual);
     }
 
@@ -126,7 +149,7 @@ class MissingRepositoryTest {
         void 존재하는_경우() {
             // given
             Pet pet = givenPet.getFirst();
-            Optional<Missing> expect = Optional.of(givenMissing.get(0));
+            Optional<Missing> expect = Optional.of(givenMissing.getFirst());
 
             // when
             missingRepository.saveAll(givenMissing);
